--- a/src/modal/style/index.less
+++ b/src/modal/style/index.less
@@ -80,10 +80,12 @@
 
   &__footer {
     display: flex;
-    gap: 8px;
     align-items: center;
     justify-content: flex-end;
 
+    > *:not(:first-child) {
+      margin-left: 8px;
+    }
     .@{modal-prefix-cls}__btn-close + .@{modal-prefix-cls}__btn-ok {
       margin-left: 8px;
     }
